#set(Boost_LIBRARY_DIR /usr/lib/x86_64-linux-gnu/)
#set(JEMALLOC_INCLUDE_DIR /usr/include/jemalloc-3.3.1/)
#find_package(Boost COMPONENTS iostreams REQUIRED)
#include_directories(${JEMALLOC_INCLUDE_DIR})
#link_directories(${Boost_LIBRARY_DIR})
#set(RAKNET_INCLUDE_DIR /root/ljbitstring/raknet/)
#include_directories(${RAKNET_INCLUDE_DIR})

cmake_minimum_required(VERSION 3.0)

option(BUILD_SHARED_LIBS "Build shared libs, otherwise static libs. (default: ON)" OFF)

add_subdirectory(WebSocket)
add_library(tlv tlv.cpp)
add_library(tcon tcon.cpp)
add_library(tstamp tstamp.cpp)
add_library(lua_utility lua_utility.cpp)
add_library(LuaMsg SHARED LuaMsg.cc)
add_library(strxor strxor.cpp)
add_library(luaserver ssdbluachatserver.cpp)
add_library(c2lua C2lua.cpp)
add_library(clientlib client.cpp)
add_library(scodec scodec.cpp)

#add_library(codec codec.cpp)

#add_subdirectory(raknet)
add_executable(ssdbluachat ssdbluachat.cc)
add_executable(client client.cc)
add_executable(testcodec testcodec.cc)
target_link_libraries(testcodec scodec)
#target_link_libraries(clientlib codec)
target_link_libraries(clientlib tcon)
#target_link_libraries(client c2lua)
target_link_libraries(client clientlib)
target_link_libraries(client luajit-5.1)
target_link_libraries(client lua_utility)
target_link_libraries(client muduo_net)
target_link_libraries(client strxor)
target_link_libraries(client boost_iostreams)
target_link_libraries(client msgpackc)
target_link_libraries(luaserver strxor)
target_link_libraries(luaserver tlv)
target_link_libraries(luaserver tcon)
target_link_libraries(luaserver c2lua)
target_link_libraries(luaserver tstamp)
target_link_libraries(luaserver boost_iostreams)
target_link_libraries(luaserver boost_program_options)
target_link_libraries(luaserver z)
#target_link_libraries(ssdbluachat bitstream)
target_link_libraries(luaserver lua_utility)
target_link_libraries(luaserver LuaMsg)
target_link_libraries(luaserver muduo_net)
target_link_libraries(luaserver yaml-cpp)
target_link_libraries(luaserver dl)
target_link_libraries(luaserver m)
target_link_libraries(luaserver luajit-5.1)
target_link_libraries(luaserver tlv) 
#target_link_libraries(luaserver ssdb-client)
target_link_libraries(luaserver tmxparser)
target_link_libraries(luaserver msgpackc)
target_link_libraries(luaserver wsjit)
target_link_libraries(ssdbluachat luaserver)

